--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.0",
     "react-input-range": "^1.3.0",
+    "react-js-pagination": "^3.0.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-promise": "^0.6.0",
